# vr_start

./: .gitignore  db_device.cpp  db_device.h
Get_req/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Program_Enter/: CMakeLists.txt  main.cpp
QT_Choose_Game/: CMakeLists.txt  add_new_devices.cpp  add_new_devices.h  add_new_devices.ui  apkfile.cpp  apkfile.h  apkfile.ui  database.cpp  getdeviceip.cpp  getdeviceip.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  second_window.cpp  second_window.h  second_window.ui
choose_game_v2/: CMakeLists.txt  apk_window.cpp  apk_window.h  apk_window.ui  connectdev.cpp  connectdev.h  connectdev.ui  data_base.cpp  data_base.h  data_base.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parserdatabase.cpp  parserdatabase.h  parserdatabase.ui
choose_game_v2/apkFiles/: AndroidManifest.xml  example.xml  manifest.xml
